--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -1,33 +1,85 @@
-version: "3.8"
-services:
-  redis:
-    image: redis:7-alpine
-    container_name: demo_redis
-    ports:
-      - "6379:6379"
+# version: "3.8"
+# services:
+#   redis:
+#     image: redis:7-alpine
+#     container_name: demo_redis
+#     ports:
+#       - "6379:6379"
 
-  auth:
-    build: ./auth-service
-    container_name: demo_auth
-    ports:
-      - "8001:8000"
-    depends_on:
-      - redis
+#   auth:
+#     build: ./auth-service
+#     container_name: demo_auth
+#     ports:
+#       - "8001:8000"
+#     depends_on:
+#       - redis
 
-  posts:
-    build: ./posts-service
-    container_name: demo_posts
-    ports:
-      - "8002:8000"
-    environment:
-      - REDIS_HOST=redis
-    depends_on:
-      - redis
+#   posts:
+#     build: ./posts-service
+#     container_name: demo_posts
+#     ports:
+#       - "8002:8000"
+#     environment:
+#       - REDIS_HOST=redis
+#     depends_on:
+#       - redis
 
-  frontend:
-    build: ./frontend
-    container_name: demo_frontend
-    ports:
-      - "8080:80"
-    depends_on:
-      - posts
+#   frontend:
+#     build: ./frontend
+#     container_name: demo_frontend
+#     ports:
+#       - "8080:80"
+#     depends_on:
+#       - posts
+
+name: Local CI Pipeline
+
+on:
+  push:
+    branches: [ "main", "dev", "test" ]
+  pull_request:
+
+jobs:
+  test-and-lint:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [auth-service, posts-service]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r application/${{ matrix.service }}/requirements.txt
+          pip install pytest flake8
+
+      - name: Lint code
+        run: flake8 application/${{ matrix.service }}/app
+
+      - name: Run tests
+        run: pytest -v application/${{ matrix.service }}/tests
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: test-and-lint
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Install docker-compose
+        run: sudo apt-get update && sudo apt-get install -y docker-compose
+
+      - name: Build Docker images
+        run: docker-compose -f application/docker-compose.yml build
+
