--- a/application/docker-compose.yml
+++ b/application/docker-compose.yml
@@ -31,55 +31,27 @@
 #       - "8080:80"
 #     depends_on:
 #       - posts
+version: "3.8"
 
-name: Local CI Pipeline
+services:
+  redis:
+    image: redis:7-alpine
 
-on:
-  push:
-    branches: [ "main", "dev", "test" ]
-  pull_request:
+  auth:
+    build: ./auth-service
+    environment:
+      - REDIS_HOST=redis
+    depends_on:
+      - redis
 
-jobs:
-  test-and-lint:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        service: [auth-service, posts-service]
+  posts:
+    build: ./posts-service
+    environment:
+      - REDIS_HOST=redis
+    depends_on:
+      - redis
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r application/${{ matrix.service }}/requirements.txt
-          pip install pytest flake8
-
-      - name: Lint code
-        run: flake8 application/${{ matrix.service }}/app
-
-      - name: Run tests
-        run: pytest -v application/${{ matrix.service }}/tests
-
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: test-and-lint
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Install docker-compose
-        run: sudo apt-get update && sudo apt-get install -y docker-compose
-
-      - name: Build Docker images
-        run: docker-compose -f application/docker-compose.yml build
-
+  frontend:
+    build: ./frontend
+    depends_on:
+      - posts
